# snake-game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: Apple.cpp  Apple.hpp  GameObject.hpp  Snake.cpp  Snake.hpp
